Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-16178

rebalance to convert tap to dcp failed when upgrade from 2.5.x to 3.1.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.1.1, 4.1.0
    • 3.1.0
    • couchbase-bucket, ns_server
    • Security Level: Public
    • None
    • windows and unix
    • Untriaged
    • Windows 64-bit
    • Yes
    • KV: Sep 14 - Oct 2

    Description

      Install 2.5.0 on 2 nodes (177 and 92)
      Create cluster and 2 buckets, default and standard
      Load 500K items to each bucket
      Install 3.1.0 on other 2 nodes (195 and 199)
      Do online upgrade (swap rebalance) to upgrade cluster to 3.1.0
      When all nodes in cluster become 3.1.0, DCP rebalance failed with error

      DCP upgrade exited with reason {{badmatch,
      {error,

      {failed_nodes,['ns_1@172.23.107.199']}

      }},
      [{dcp_upgrade,handle_call,3,
      [

      {file,"src/dcp_upgrade.erl"}

      ,

      {line,65}

      ]},
      {gen_server,handle_msg,5,
      [

      {file,"gen_server.erl"}

      ,

      {line,585}

      ]},
      {proc_lib,init_p_do_apply,3,
      [

      {file,"proc_lib.erl"}

      ,

      {line,239}

      ]}]}
      ns_orchestrator002 ns_1@172.23.107.195 13:16:10 - Fri Aug 28, 2015

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-16178
          # Subject Branch Project Status CR V

          Activity

            People

              abhinav Abhi Dangeti
              thuan Thuan Nguyen
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty