MB-16178: Removing sanity check while adding DCP on TAP

Removing the sanity check which would prevent:
- Adding a DCP passive stream for a vbucket when a TAP consumer is
still connected.

Removing this sanity check as there is no real threat to the server
of it going into an inconsistent state during the upgrade.

Change-Id: If7643b2ebc21404dd4edb984718b322e411e28bc
Reviewed-on: http://review.couchbase.org/54964
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Aliaksey Artamonau <aliaksiej.artamonau@gmail.com>